SERVER-50542 Catalog Cache is not cleaned on ShardingTestFixture